# pathlint

./: .coveragerc  .gitignore  AUTHORS.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.md
scratch/examples/: bad_code.py  good_code.py  mixed_code.py
src/pathlint/: __init__.py  autofix.py  linter.py
tests/: conftest.py  test_linter.py
